--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,3 +1,12 @@
+=== 0.2.0 :: 2007-03-12
+
+* ruby-casserver now behaves more like a real command-line app, accepting
+  various command line arguments including -h (help), -v (version), -c (use
+  an alternat config.yml), and -d (daemonize, when using mongrel/webrick mode)
+* CAS XML responses are no longer indent-formatted... Markaby's indentation
+  seemed to be causing problems with the PHP CAS client
+* Misc minor bug fixes/cleanup
+
 === 0.1.0 :: 2007-03-01
 
 * First public release.
