- rubycas-server-ctl now works with both webrick and mongrel - added 'status' method for rubycas-server-ctl to print out the server's current status - -conf_file option for rubycas-server-ctl has been changed to -config to match rubycas-server - better detection of startup problems with mongrel - rubycas-server-ctl will now use the local copy of rubycas-server (rather than the one installed in /usr/bin)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@
 * Added rubycas-server-ctl script for controlling daemonized server.
 * Authenticator can now be loaded from an external file using the 'source'
   configuration option.
+* Better early detection of startup problems with mongrel.
 
 === 0.3.0 :: 2007-03-29
 
