--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,4 @@
-=== 0.4.0 :: in progress
+=== 0.4.0 :: In progress...
 
 * Added rubycas-server-ctl script for controlling daemonized server.
 * Added system startup script to be used in /etc/init.d on Linux systems.
