changed 'require_gem' calls to 'gem' to make rubygems 0.9+ happy

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,4 @@
-=== 0.4.0 :: in progress
+=== 0.4.0 :: In progress...
 
 * Added rubycas-server-ctl script for controlling daemonized server.
 * Added system startup script to be used in /etc/init.d on Linux systems.
