--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
-=== 0.5.0 :: In progress...
+=== 0.4.1 :: In progress...
 
-
+* rubycas-server is now again compatible with older versions of rubygems
+  (pre-0.9.0). To achieve this, we alias the 'gem' method to the old 
+  'require_gem' if 'gem' is not already defined.
 
 === 0.4.0 :: 2007-06-05
 
