--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+=== 0.5.0 :: In Progress
+
+* Gateway requests should now be handled correctly. Note that if you are using
+  RubyCAS-Client and want gatewaying, you will need to upgrade it to 1.1.0 as 
+  gatewaying was broken in prior versions.
+
 === 0.4.2 :: 2007-07-26
 
 * The LDAP/AD authenticator has been largely re-written. The code is a bit
