took version back down to 0.4.2... we will use svn rev numbers to track development releases, and only increment the full version number once an actual release has been made

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,4 @@
-=== 0.5.0 :: In Progress
+=== In Progress
 
 * Gateway requests should now be handled correctly. When the request to the
   login page is made with gateway=true as one of the parameters, the CAS
