--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -1,4 +1,4 @@
-=== 0.5.0 :: In Progress
+=== In Progress
 
 * Gateway requests should now be handled correctly. When the request to the
   login page is made with gateway=true as one of the parameters, the CAS
