--- a/wiki/UsageScenarios.wiki
+++ b/wiki/UsageScenarios.wiki
@@ -7,25 +7,34 @@ There are many ways to make use of the CAS architecture. Everything from using i
 
 This page describes some of the more common usage scenarios, and explains how to implement  them using RubyCAS-Server. When discussing the client side of the CAS equation, we often refer to [http://code.google.com/p/rubycas-client/ RubyCAS-Client], however any full-featured CAS client can be used in its place (as should be true for the server as well).
 
+*Before looking at any of these scenarios*, you should have a look at the [HowToConfigure basic configuration guide] for RubyCAS-Server. The various configurations described below assume that you already have a basic RubyCAS-Server up and running.
 
-== Scenario A: Basics - Configuring a CAS server and protecting multiple web apps ==
 
-This is the canonical CAS usage example. Lets assume you have two web applications, a Rails app at http://myrails.example.com, and a PHP-based website at http://myphp.example.com. You want to fully protect both websites, so that accessing any of their pages requires the user to log in via CAS.
+= Scenario A: Company Intranet =
+
+Your company or organization has several web applications, all of which should be accessible only to authenticated users. Accessing any page within these websites should automatically redirect the user to the CAS login screen. Your user accounts are stored and managed by Active Directory. This is, more or less, the canonical CAS usage scenario.
+
+== Requirements ==
 
 You will need:
 
   * *RubyCAS-Server*
   * A basic *SSL certificate* for your RubyCAS-Server
-  * *[http://code.google.com/p/rubycas-client/ RubyCAS-Client]* to add CAS protection to your Rails app
-  * *[http://www.ja-sig.org/wiki/display/CASC/phpCAS phpCAS]* to add CAS protection to your PHP app
+  * *CAS client libraries* for all of your client applications ([http://code.google.com/p/rubycas-client/ RubyCAS-Client] for Rails, [http://www.ja-sig.org/wiki/display/CASC/phpCAS phpCAS] for PHP, etc.; see http://www.ja-sig.org/products/cas/client/index.html).
 
-Note that it is perfectly fine for all three pieces -- the CAS server and the two web apps -- to be served from the same machine.
+Note that it is perfectly fine for your CAS server and your CAS-protected web applications to reside on the same server machine.
 
+== RubyCAS-Server Configuration ==
 
-== Scenario B: Gatewaying - Using optional/partial CAS authentication ==
+The standard configuration described in the [HowToConfigure] guide more or less covers everything you need here. The default _webrick_ server is probably good enough, unless you expect the CAS server to receive heavy traffic (i.e. you are in a large organization, with thousands of users). If performance is an issue, have a look at the _Apache_ + _mongrel_ configuration discussed in *Scenario B*.
+
+= Scenario B: Public Website with private member/administration pages =
+
+_To be written_
+
+= Scenario C: Proxying - Using a CAS server with a portal =
 
 _To be written_
 
-== Scenario C: Proxying - Using a CAS server with a portal ==
 
-_To be written_
+
