--- a/wiki/HowToConfigure.wiki
+++ b/wiki/HowToConfigure.wiki
@@ -1,4 +1,5 @@
 #summary Detailed walkthrough explaining how to configure and use RubyCAS-Server
+#labels Featured,Phase-Deploy
 
 = Introduction =
 
