--- a/wiki/UsageScenarios.wiki
+++ b/wiki/UsageScenarios.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-There are many ways to make use of the CAS architecture. Everything from using it as a basic, local authentication mechanism for a stand-alone web application, all the way to acting as an enterprise-level central authentication system for all HTTP-based services, as part of an Active Directory domain.
+There are many ways to make use of the CAS architecture. CAS can act as a basic, local authentication mechanism for a stand-alone web application, all the way to acting as an enterprise-level central authentication system for all HTTP-based services, as part of an Active Directory domain.
 
 This page describes some of the more common usage scenarios, and explains how to implement  them using RubyCAS-Server. When discussing the client side of the CAS equation, we often refer to [http://code.google.com/p/rubycas-client/ RubyCAS-Client], however any full-featured CAS client can be used in its place (as should be true for the server as well).
 
