--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -32,6 +32,8 @@
   validation for all of them. [jzylks]
 * When using webrick, you can now run with SSL disabled by omitting the 
   ssl_cert and ssl_key parameters.
+* Changed incorrect MySQL example database configuration -- option should
+  be 'host:' not 'server:' (issue #22).
 
 === 0.4.2 :: 2007-07-26
 
